--- a/style.css
+++ b/style.css
@@ -4,6 +4,26 @@
 body {
     margin: 0;
     background-color: #eeeeee;
+    color: #222222;
+    font-family: sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
+p {
+    line-height: 1.8;
+}
+
+img {
+    display: block;
+}
+
+/* 横幅と左右の余白 */
+.w-container {
+    width: min(92%, 1166px);
+    margin: auto;
 }
 
 /* ヘッダー */
@@ -17,4 +37,43 @@ body {
     justify-content: space-between;
     align-items: center;
     height: 100%;
+}
+
+/* ナビゲーションボタン */
+.navbtn {
+    padding: 0;
+    outline: none;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    color: #aaaaaa;
+    font-size: 30px;
+}
+
+/* ヒーロー */
+.hero {
+    height: 650px;
+    background-image: url(img/hero.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.hero-container {
+    display: grid;
+    justify-items: center;
+    align-content: center;
+    height: 100%;
+}
+
+.hero h1 {
+    margin-bottom: 42px;
+    font-family: "Montserrat", sans-serif;
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 1.3;
+    text-align: center;
+}
+
+.hero p {
+    margin-bottom: 72px;
 }
